--- a/显示隐藏文本框内容.html
+++ b/显示隐藏文本框内容.html
@@ -31,7 +31,7 @@
             if (this.value === '') {
                 this.value = '手机';
             }
-            //获得焦点后要把文本框的文字变黑
+            //失去焦点后要把文本框的文字变灰
             this.style.color = '#999';
         }
     </script>
